--- a/09_Theme_08_v2/Views/Home/Index.cshtml
+++ b/09_Theme_08_v2/Views/Home/Index.cshtml
@@ -152,8 +152,8 @@
                                     <div class="item-inner">
                                         <div class="item-img">
                                             <div class="item-img-info">
-                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="product-image">
-                                                    <amp-img src="@item.Images" alt="@item.PrName" height="405" width="270"></amp-img>
+                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="product-image">                                                    
+                                                    <img src="@item.Images" class="img-responsive" alt="@item.PrName"/>
                                                 </a>
 
                                             </div>
