--- a/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -9,8 +9,10 @@
 }
 
 <div class="block left-module">
-
-    <p class="title_block">Danh mục sản phẩm</p>
+    <p class="title-l">
+        <span class="title_block">Danh mục sản phẩm</span>
+    </p>
+    
     <div class="block_content">
         @if (commonInfo != null)
         {
@@ -50,7 +52,9 @@
 @if (ViewData["saleProduct"] != null)
 {
     <div class="block left-module">
-        <p class="title_block">Đang giảm giá</p>
+        <p class="title-l">
+            <span class="title_block">Đang giảm giá</span>
+        </p>
         <div class="block_content product-onsale">
 
             @{
@@ -157,74 +161,77 @@
     AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
     if (bestSaleList != null && bestSaleList.ResultCount > 3 && bestSaleList.Item.Length > 0)
     {
-        <div class="block left-module">
-            <p class="title_block">Bán chạy</p>
-            <div class="block_content">
-                <div class="owl-carousel owl-best-sell" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplay="true" data-autoplayHoverPause="true" data-items="1">
-                    <ul class="products-block best-sell">
-                        @for (int i = 0; i < 3; i++)
-                        {
-                            <li>
-                                <div class="products-block-left">
-                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
-                                        <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
-                                    </a>
-                                </div>
-                                <div class="products-block-right">
-                                    <p class="product-name">
-                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
-                                    </p>
-                                    @if (bestSaleList.Item[i].IsSale)
-                                    {
+    <div class="block left-module">
+        <p class="title-l">
+            <span class="title_block">Bán chạy</span>
+        </p>
+        
+        <div class="block_content">
+            <div class="owl-carousel owl-best-sell" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplay="true" data-autoplayHoverPause="true" data-items="1">
+                <ul class="products-block best-sell">
+                    @for (int i = 0; i < 3; i++)
+                    {
+                        <li>
+                            <div class="products-block-left">
+                                <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
+                                    <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
+                                </a>
+                            </div>
+                            <div class="products-block-right">
+                                <p class="product-name">
+                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
+                                </p>
+                                @if (bestSaleList.Item[i].IsSale)
+                                {
 
-                                        <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].SalePrice.ToString()) đ</p>
-                                        <p class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString()) đ</p>
-                                    }
-                                    else
-                                    {
-                                        <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString()) đ</p>
-                                    }
+                                    <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].SalePrice.ToString()) đ</p>
+                                    <p class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString()) đ</p>
+                                }
+                                else
+                                {
+                                    <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString()) đ</p>
+                                }
 
-                                    <p class="product-star">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-half-o"></i>
-                                    </p>
-                                </div>
-                            </li>
-                        }
-                    </ul>
-                    <ul class="products-block best-sell">
-                        @for (int i = 3; i < bestSaleList.Item.Length; i++)
-                        {
-                            <li>
-                                <div class="products-block-left">
-                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
-                                        <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
-                                    </a>
-                                </div>
-                                <div class="products-block-right">
-                                    <p class="product-name">
-                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
-                                    </p>
+                                <p class="product-star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-half-o"></i>
+                                </p>
+                            </div>
+                        </li>
+                    }
+                </ul>
+                <ul class="products-block best-sell">
+                    @for (int i = 3; i < bestSaleList.Item.Length; i++)
+                    {
+                        <li>
+                            <div class="products-block-left">
+                                <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
+                                    <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
+                                </a>
+                            </div>
+                            <div class="products-block-right">
+                                <p class="product-name">
+                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
+                                </p>
 
-                                    <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
-                                    <p class="product-star">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-half-o"></i>
-                                    </p>
-                                </div>
-                            </li>
-                        }
-                    </ul>
-                </div>
+                                <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
+                                <p class="product-star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-half-o"></i>
+                                </p>
+                            </div>
+                        </li>
+                    }
+                </ul>
             </div>
         </div>
+    </div>
     }
     else if (bestSaleList != null && bestSaleList.ResultCount <= 3)
     {
@@ -305,12 +312,7 @@
 
                 <li>
                     <div class="products-block-left">
-                        <a href="/">
-                            <amp-img width="375" height="375" src="http://media.anpero.com/images/40/12018/32018013117481494.jpg" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat'>
-                                <noscript>
-                                    <img src="http://media.anpero.com/images/40/12018/32018013117481494.jpg" class="img-responsive" />
-                                </noscript>
-                            </amp-img>
+                        <a href="/">                         
                             <img src="http://media.anpero.com/images/40/12018/32018013117481494.jpg" />
                         </a>
                         <div class="right-block">
