--- a/04_Shop_multiProduct/Views/Shared/product/_SearchBox.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_SearchBox.cshtml
@@ -10,7 +10,8 @@
 
     <div class="block left-module">
         <div class="block left-module search">
-            <p class="title_block border-b tittle-b bw">Tìm kiếm</p>
+            
+            <h3 class="page-heading"><span class="page-heading-title">Tìm kiếm</span></h3>
             <div class="block_content border-b featureLand bw">
                 <form action="/search" name="search2" id="search2" method="get" aria-label="Tìm kiếm">
                     <div class="form-group">
@@ -54,13 +55,13 @@
                             <option value="priceDesc">Giá giảm dần</option>
                             <option value="timeDesc">Mới nhất</option>
                             <option value="nameAsc">Tên A-Z</option>
-                            
+
                         </select>
                     </div>
                     <div class="form-group">
                         <label>Khoảng giá</label>
                         <select class="form-control" name="priceRank">
-                            <option value="">Tất cả khoảng giá</option>
+                            <option value="">Tất cả các giá</option>
                             <option value="1000000-3000000">1 - 3 triệu</option>
                             <option value="3000000-7000000">3 - 7 triệu</option>
                             <option value="7000000-10000000">7- 10 triệu</option>
