--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -203,7 +203,7 @@
     <script src="//media.anpero.com/cdn/plugins/jquery-1.10.2.min.js"></script>
     <script src="//media.anpero.com/cdn/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
-    
+
 
     @Scripts.Render("~/bundles/bootstrap")
     <script src="/Scripts/ShoppingCart.js"></script>
@@ -396,30 +396,31 @@
                     </div>
                 </div>
             </div>
-            <div id="footer-menu-box">
-                <div class="col-sm-12">
-                    <ul class="footer-menu-list">
-                        <li><a title="about" href="/about">Về chúng tôi</a></li>
-                        <li><a href="/home/contact">Liên hệ</a></li>
 
-                    </ul>
-                </div>
-                <div class="col-sm-12">
-                    <ul class="footer-menu-list">
-                        <li><a title="Chính sách vận chuyển" href="/shippolicy">Chính sách vận chuyển</a></li>
-                        <li><a title="Chính sách bảo hành" href="/WarrantyPolicy">Chính sách bảo hành</a></li>
-                        <li><a title="Chính sách đổi trả" href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
-                        <li><a title="Chính sách bảo mật" href="/PrivacyPolicy">Chính sách bảo mật</a></li>
-                        <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
-                        <li><a href="/blog">Tin tức</a></li>
-                        <li><a href="/#contact">Liên hệ</a></li>
-
-                    </ul>
-                </div>
-                <p class="text-center">Copyrights © 2017 @commonInfo.Name. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpero">Anpero.com</a></p>
-            </div>
         </div>
     </footer>
+    <div id="footer-menu-box">
+        <div class="col-sm-12">
+            <ul class="footer-menu-list">
+                <li><a title="about" href="/about">Về chúng tôi</a></li>
+                <li><a href="/home/contact">Liên hệ</a></li>
+
+            </ul>
+        </div>
+        <div class="col-sm-12">
+            <ul class="footer-menu-list">
+                <li><a title="Chính sách vận chuyển" href="/shippolicy">Chính sách vận chuyển</a></li>
+                <li><a title="Chính sách bảo hành" href="/WarrantyPolicy">Chính sách bảo hành</a></li>
+                <li><a title="Chính sách đổi trả" href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
+                <li><a title="Chính sách bảo mật" href="/PrivacyPolicy">Chính sách bảo mật</a></li>
+                <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
+                <li><a href="/blog">Tin tức</a></li>
+                <li><a href="/home/contact">Liên hệ</a></li>
+
+            </ul>
+        </div>
+        <p class="text-center">Copyrights © 2017 @commonInfo.Name. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpero">Anpero.com</a></p>
+    </div>
     <div id="fb-root"></div>
     <script>
         (function (d, s, id) {
@@ -435,12 +436,12 @@
         $(".tree-menu li span").mouseenter(function () {
             $(this).closest('li').children('ul').show();
         });
-                            //$(window).scroll(function () {
-                            //    var mainHearder = $(".main-header").height() + 30;
-                            //    if ($(window).scrollTop() == mainHearder) {
-                            //        console.log($(window).scrollTop());
-                            //    }
-                            //})
+                                //$(window).scroll(function () {
+                                //    var mainHearder = $(".main-header").height() + 30;
+                                //    if ($(window).scrollTop() == mainHearder) {
+                                //        console.log($(window).scrollTop());
+                                //    }
+                                //})
 
 
     </script>
