--- a/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -8,44 +8,40 @@
 
 }
 
-<div class="block left-module">
-    <p class="title-l">
-        <span class="title_block">Danh mục sản phẩm</span>
-    </p>
-    
-    <div class="block_content">
+<div class="block left-module side-nav-categories">    
+    <h2 class="page-heading">
+        <span class="page-heading-title">Danh mục sản phẩm</span>
+
+    </h2>
+    <div class="box-content box-category">
         @if (commonInfo != null)
         {
-            <div class="layered layered-category">
-                <div class="layered-content  ">
-                    <ul class="tree-menu">
-                        @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-                        {
-                            for (int i = 0; i < commonInfo.ProductCategoryList.Length; i++)
+            <ul>
+                @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+                {
+                    for (int i = 0; i < commonInfo.ProductCategoryList.Length; i++)
+                    {
+                        <li>
+
+                            <a href="@Anpero.StringHelpper.GetParentCategoryLink(commonInfo.ProductCategoryList[i].Name,commonInfo.ProductCategoryList[i].Id)">@commonInfo.ProductCategoryList[i].Name</a>
+
+                            @if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
                             {
-                                <li>
-                                    <div class="txt">
-                                        <span></span><a href="@Anpero.StringHelpper.GetParentCategoryLink(commonInfo.ProductCategoryList[i].Name,commonInfo.ProductCategoryList[i].Id)">@commonInfo.ProductCategoryList[i].Name</a>
-                                    </div>
-                                    @if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
+                                <span class="subDropdown plus"></span>
+                                <ul>
+                                    @for (int j = 0; j < commonInfo.ProductCategoryList[i].ChildCategory.Length; j++)
                                     {
-                                        <ul>
-                                            @for (int j = 0; j < commonInfo.ProductCategoryList[i].ChildCategory.Length; j++)
-                                            {
-                                                <li>
-                                                    <div class="txt"><span></span><a href="@Anpero.StringHelpper.GetCategoryLink(commonInfo.ProductCategoryList[i].ChildCategory[j].Name,commonInfo.ProductCategoryList[i].ChildCategory[j].Id)">@commonInfo.ProductCategoryList[i].ChildCategory[j].Name</a></div>
-                                                </li>
-                                            }
-                                        </ul>
-
+                                        <li>
+                                            <a href="@Anpero.StringHelpper.GetCategoryLink(commonInfo.ProductCategoryList[i].ChildCategory[j].Name,commonInfo.ProductCategoryList[i].ChildCategory[j].Id)">@commonInfo.ProductCategoryList[i].ChildCategory[j].Name</a>
+                                        </li>
                                     }
-                                </li>
-                            }
-                        }
-                    </ul>
-                </div>
-            </div>
+                                </ul>
 
+                            }
+                        </li>
+                    }
+                }
+            </ul>
         }
     </div>
 </div>
@@ -161,77 +157,77 @@
     AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
     if (bestSaleList != null && bestSaleList.ResultCount > 3 && bestSaleList.Item.Length > 0)
     {
-    <div class="block left-module">
-        <p class="title-l">
-            <span class="title_block">Bán chạy</span>
-        </p>
-        
-        <div class="block_content">
-            <div class="owl-carousel owl-best-sell" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplay="true" data-autoplayHoverPause="true" data-items="1">
-                <ul class="products-block best-sell">
-                    @for (int i = 0; i < 3; i++)
-                    {
-                        <li>
-                            <div class="products-block-left">
-                                <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
-                                    <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
-                                </a>
-                            </div>
-                            <div class="products-block-right">
-                                <p class="product-name">
-                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
-                                </p>
-                                @if (bestSaleList.Item[i].IsSale)
-                                {
+        <div class="block left-module">
+            <p class="title-l">
+                <span class="title_block">Bán chạy</span>
+            </p>
 
-                                    <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].SalePrice.ToString()) đ</p>
-                                    <p class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString()) đ</p>
-                                }
-                                else
-                                {
-                                    <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString()) đ</p>
-                                }
+            <div class="block_content">
+                <div class="owl-carousel owl-best-sell" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplay="true" data-autoplayHoverPause="true" data-items="1">
+                    <ul class="products-block best-sell">
+                        @for (int i = 0; i < 3; i++)
+                        {
+                            <li>
+                                <div class="products-block-left">
+                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
+                                        <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
+                                    </a>
+                                </div>
+                                <div class="products-block-right">
+                                    <p class="product-name">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
+                                    </p>
+                                    @if (bestSaleList.Item[i].IsSale)
+                                    {
 
-                                <p class="product-star">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star-half-o"></i>
-                                </p>
-                            </div>
-                        </li>
-                    }
-                </ul>
-                <ul class="products-block best-sell">
-                    @for (int i = 3; i < bestSaleList.Item.Length; i++)
-                    {
-                        <li>
-                            <div class="products-block-left">
-                                <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
-                                    <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
-                                </a>
-                            </div>
-                            <div class="products-block-right">
-                                <p class="product-name">
-                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
-                                </p>
+                                        <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].SalePrice.ToString()) đ</p>
+                                        <p class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString()) đ</p>
+                                    }
+                                    else
+                                    {
+                                        <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString()) đ</p>
+                                    }
 
-                                <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
-                                <p class="product-star">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star-half-o"></i>
-                                </p>
-                            </div>
-                        </li>
-                    }
-                </ul>
+                                    <p class="product-star">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star-half-o"></i>
+                                    </p>
+                                </div>
+                            </li>
+                        }
+                    </ul>
+                    <ul class="products-block best-sell">
+                        @for (int i = 3; i < bestSaleList.Item.Length; i++)
+                        {
+                            <li>
+                                <div class="products-block-left">
+                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
+                                        <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
+                                    </a>
+                                </div>
+                                <div class="products-block-right">
+                                    <p class="product-name">
+                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
+                                    </p>
+
+                                    <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
+                                    <p class="product-star">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star-half-o"></i>
+                                    </p>
+                                </div>
+                            </li>
+                        }
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
     }
     else if (bestSaleList != null && bestSaleList.ResultCount <= 3)
     {
@@ -278,11 +274,7 @@
                 <li>
                     <div class="products-block-left">
                         <a href="/">
-                            <amp-img width="375" height="375" src="http://media.anpero.com/images/40/12018/22018013117424036.jpg" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat'>
-                                <noscript>
-                                    <img src="http://media.anpero.com/images/40/12018/22018013117424036.jpg" class="img-responsive" />
-                                </noscript>
-                            </amp-img>
+                            <img src="http://media.anpero.com/images/40/12018/22018013117424036.jpg" class="img-responsive" />
                         </a>
                         <div class="right-block">
                             <h6>ĐÀO THỊ NGA </h6>
@@ -293,13 +285,8 @@
                 </li>
                 <li>
                     <div class="products-block-left">
-                        <a href="/">
-                            <amp-img width="375" height="375" src="http://media.anpero.com/images/40/12018/12018013117042547.jpg" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat'>
-                                <noscript>
-                                    <img src="http://media.anpero.com/images/40/12018/12018013117042547.jpg" class="img-responsive" />
-                                </noscript>
-                            </amp-img>
-                            
+                        <a href="/">                            
+                            <img src="http://media.anpero.com/images/40/12018/12018013117042547.jpg" class="img-responsive" />
                         </a>
                         <div class="right-block">
                             <h6>PHẠM THỊ HƯỜNG </h6>
@@ -312,7 +299,7 @@
 
                 <li>
                     <div class="products-block-left">
-                        <a href="/">                         
+                        <a href="/">
                             <img src="http://media.anpero.com/images/40/12018/32018013117481494.jpg" />
                         </a>
                         <div class="right-block">
@@ -335,7 +322,7 @@
                         </div>
                     </div>
                 </li>
-           
+
             </ul>
         </div>
     </div>
