--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -2815,6 +2815,7 @@ span.notify-right{
 }
 #left_column .block .block_content, .tree-menu>li>ul {
  padding: 0;
+ margin-top:25px;
 }
 .tree-menu>li>ul li {
  padding-left: 20px;
