--- a/04_Shop_multiProduct/Views/Shared/product/_SearchBox.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_SearchBox.cshtml
@@ -14,8 +14,7 @@
             <h3 class="page-heading"><span class="page-heading-title">Tìm kiếm</span></h3>
             <div class="block_content border-b featureLand bw">
                 <form action="/search" name="search2" id="search2" method="get" aria-label="Tìm kiếm">
-                    <div class="form-group">
-                        <label for="category">Danh mục</label>
+                    <div class="form-group">                        
                         <select class="form-control" name="category" id="category" aria-label="category">
                             <option value="0">Danh mục sản phẩm</option>
                             @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
@@ -37,8 +36,7 @@
                     </div>
                     @if (commonInfo.ProductGroupList != null && commonInfo.ProductGroupList.Count() > 0)
                     {
-                        <div class="form-group">
-                            <label>Hãng sản xuất</label>
+                        <div class="form-group">                            
                             <select class="form-control" name="GroupId">
                                 <option value="0">Chọn nhà cung cấp</option>
                                 @for (int i = 0; i < commonInfo.ProductGroupList.Count(); i++)
@@ -48,8 +46,7 @@
                             </select>
                         </div>
                     }
-                    <div class="form-group">
-                        <label>Sắp xếp</label>
+                    <div class="form-group">                        
                         <select class="form-control" name="SortBy">
                             <option value="priceAsc">Giá tăng dần</option>
                             <option value="priceDesc">Giá giảm dần</option>
@@ -58,8 +55,7 @@
 
                         </select>
                     </div>
-                    <div class="form-group">
-                        <label>Khoảng giá</label>
+                    <div class="form-group">                        
                         <select class="form-control" name="priceRank">
                             <option value="">Tất cả các giá</option>
                             <option value="1000000-3000000">1 - 3 triệu</option>
@@ -69,7 +65,7 @@
                         </select>
                     </div>
                     <div class="form-action">
-                        <button class="btn btn-success form-control btn-search" type="submit">Tìm kiếm</button>
+                        <button class="btn btn-default form-control btn-search" type="submit">Tìm kiếm</button>
                     </div>
 
                 </form>
